--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blue">#1976D2</color>
     <color name="Yellow">#FFC94C</color>
     <color name="light_blue">#64B5F6</color>
+    <color name="dark_blue">#00008B</color>
 </resources>
