--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,5 +30,11 @@
         <action
             android:id="@+id/action_editTaskFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <argument
+            android:name="task"
+            app:argType="com.example.labexam4.model.Task"
+            app:nullable="true"/>
+
+
     </fragment>
 </navigation>
