--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -13,18 +13,11 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="116dp"
-            android:layout_marginTop="-2dp"
-            app:srcCompat="@drawable/startheader" />
-
-        <ImageView
             android:id="@+id/imageView3"
             android:layout_width="220dp"
             android:layout_height="249dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="80dp"
             app:srcCompat="@drawable/startpic" />
 
         <TextView
@@ -35,11 +28,10 @@
             android:layout_marginTop="20dp"
             android:text="@string/welcome"
             android:textAlignment="viewStart"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:textSize="36sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:textColor="@color/blue" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView2"
@@ -65,7 +57,8 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:cornerRadius="25sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
