--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,18 +12,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:srcCompat="@drawable/header" />
-
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="40sp"
             android:text="Hey Anne,"
             android:textColor="@color/blue"
             android:textSize="28sp"
@@ -62,9 +56,9 @@
                 android:id="@+id/imageView13"
                 android:layout_width="132dp"
                 android:layout_height="90dp"
+                android:layout_margin="15sp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/todo"
-                tools:layout_margin="15sp" />
+                app:srcCompat="@drawable/todo" />
 
             <ImageView
                 android:id="@+id/imageView14"
@@ -143,7 +137,7 @@
             android:background="@drawable/background"
             android:padding="20sp"
             android:text="@string/task1"
-            android:textColor="@color/design_default_color_primary_variant"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -155,7 +149,19 @@
             android:background="@drawable/background"
             android:padding="20sp"
             android:text="@string/task2"
-            android:textColor="@color/design_default_color_primary_variant"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20sp"
+            android:background="@drawable/background"
+            android:padding="20sp"
+            android:text="@string/task3"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -163,7 +169,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/footer"
             android:orientation="horizontal">
 
